<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foodrLogoImage"
        android:layout_width="277dp"
        android:layout_height="254dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintLeft_toLeftOf="@id/welcomeText"
        app:layout_constraintRight_toRightOf="@id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:srcCompat="@drawable/foodr" />

    <Button
        android:id="@+id/btnSetParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_custom"
        android:text="@string/set_parameters_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnHelp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnHelp"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_custom"
        android:text="@string/help_button"
        app:layout_constraintEnd_toEndOf="@+id/foodrLogoImage"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/foodrLogoImage"
        app:layout_constraintTop_toBottomOf="@+id/foodrLogoImage" />

</androidx.constraintlayout.widget.ConstraintLayout>